--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -25,6 +25,7 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/dotsIndicator"
         android:layout_below="@id/toolbar">
 
         <com.cxyzy.demo.ui.view.ViewPagerView
