--- a/app/src/main/res/layout/part_current_weather.xml
+++ b/app/src/main/res/layout/part_current_weather.xml
@@ -28,7 +28,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/highLowTemperatureTv"
+        android:id="@+id/currentHighLowTemperatureTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -55,7 +55,7 @@
             android:text="雨花台" />
 
         <ImageView
-            android:id="@+id/oimageView"
+            android:id="@+id/currentLocationIv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/location" />
