--- a/app/src/main/res/layout/part_real_time_weather.xml
+++ b/app/src/main/res/layout/part_real_time_weather.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -12,7 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/currentTemperatureTv"
+            android:id="@+id/realTimeTemperatureTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
@@ -28,7 +29,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/currentHighLowTemperatureTv"
+        android:id="@+id/realTimeHighLowTemperatureTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -42,10 +43,10 @@
         android:text="多云" />
 
     <LinearLayout
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <TextView
@@ -58,7 +59,9 @@
             android:id="@+id/currentLocationIv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/location" />
+            android:src="@mipmap/location"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
     </LinearLayout>
 
@@ -67,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="上次更新时间：下午4:48" />
+        tools:text="上次更新时间：下午4:48" />
 
 
 </LinearLayout>
