--- a/app/src/main/res/layout/part_real_time_weather.xml
+++ b/app/src/main/res/layout/part_real_time_weather.xml
@@ -57,8 +57,9 @@
 
         <ImageView
             android:id="@+id/currentLocationIv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="14dp"
+            android:layout_gravity="center"
             android:src="@mipmap/location"
             android:visibility="gone"
             tools:visibility="visible" />
