--- a/app/src/main/res/layout/page_weather_single.xml
+++ b/app/src/main/res/layout/page_weather_single.xml
@@ -16,10 +16,15 @@
         android:visibility="invisible"
         tools:visibility="visible" />
 
+    <com.cxyzy.demo.ui.view.HorizontalRecyclerView
+        android:id="@+id/todayRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/futureRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </LinearLayout>
