--- a/app/src/main/res/layout/part_real_time_weather.xml
+++ b/app/src/main/res/layout/part_real_time_weather.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:text="31"
+            tools:text="31"
             android:textSize="30sp" />
 
         <TextView
@@ -25,7 +25,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
+            android:layout_marginRight="20dp"
             android:text="℃" />
+
+        <TextView
+            android:id="@+id/weatherDescTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="多云" />
     </LinearLayout>
 
     <TextView
@@ -33,14 +40,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="33℃ / 24℃" />
+        tools:text="33℃ / 24℃" />
 
-    <TextView
-        android:id="@+id/weatherDescTv"
+    <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="多云" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:includeFontPadding="false"
+            android:text="空气质量:" />
+
+        <TextView
+            android:id="@+id/airQualityTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            tools:text="优 , 46" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -53,7 +75,7 @@
             android:id="@+id/locationNameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="雨花台" />
+            tools:text="雨花台" />
 
         <ImageView
             android:id="@+id/currentLocationIv"
